# ppp-qa-automation

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AI_CAPABILITIES_GUIDE.md  AI_INTEGRATION_SUMMARY.md  AI_SLIDE_READY_TO_USE.md  AI_TALKING_POINTS_CARD.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS_GUIDE.md  COMPLETE_PRESENTATION_PACKAGE_SUMMARY.md  CONTRIBUTING.md  GIT_SETUP_COMMANDS.sh  GIT_SETUP_GUIDE.md  MANUAL_SETUP_GUIDE.md  MANUAL_SETUP_GUIDE_PART2.md  MANUAL_SETUP_README.md  Makefile  PARALLEL_TESTING_GUIDE.md  POWERPOINT_ICONS_GUIDE.md  PRESENTATION_5MIN_VERSION.md  PRESENTATION_CONTENT.md  PRESENTATION_PACKAGE_README.md  PRESENTATION_VISUAL_GUIDE.md  PROJECT_GUIDE.md  PULL_REQUEST_GUIDELINES.md  QUICK_REFERENCE.md  README.md  SIMPLE_ARCHITECTURE_DIAGRAM.md  SPEAKER_CHEAT_SHEET.md  claude.md  conftest.py  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.gitlab/merge_request_templates/: default.md
core/: __init__.py  config.py  conftest.py  logger.py
core/base/: __init__.py  api_client.py  page_base.py
core/data/: __init__.py  yaml_loader.py
core/utils/: __init__.py  element_utils.py  string_utils.py  wait_utils.py
scripts/: __init__.py  tasks.py  validate_yaml.py
team_alpha/: __init__.py  conftest.py
team_alpha/actions/: __init__.py  shopping_actions.py
team_alpha/api_clients/: __init__.py  reqres_api_client.py
team_alpha/locators/: __init__.py  locators.py
team_alpha/pages/: __init__.py  google_search_page.py  google_shopping_page.py
team_alpha/test_data/: README.md  __init__.py  data_loader.py  google_shopping.yaml
team_alpha/tests/: __init__.py
team_alpha/tests/api/: __init__.py  test_reqres_api.py
team_alpha/tests/integration/: __init__.py
team_alpha/tests/web/: README_GOOGLE_SHOPPING.md  __init__.py  test_google_shopping.py
team_beta/: README.md
team_gamma/: README.md
