[tool.poetry]
name = "qa-automation"
version = "0.1.0"
description = "QA Test Automation Framework - Simplified Monorepo"
authors = ["Your Team <team@example.com>"]
readme = "README.md"
packages = [{include = "scripts"}, {include = "core"}, {include = "team_alpha"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
playwright = "^1.39.0"
pytest = "^7.4.0"
pytest-playwright = "^0.4.0"
pytest-xdist = "^3.3.0"
allure-pytest = "^2.13.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
Faker = "^19.6.0"
pyyaml = "^6.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.285"
isort = "^5.12.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
# Formatting and linting (cross-platform alternative to Makefile)
format = "scripts.tasks:format_code"
lint = "scripts.tasks:lint"
lint-fix = "scripts.tasks:lint_fix"
format-check = "scripts.tasks:format_check"
validate-yaml = "scripts.tasks:validate_yaml"

# Testing
test-all = "scripts.tasks:test_all"
test-api = "scripts.tasks:test_api"
test-web = "scripts.tasks:test_web"
test-web-headed = "scripts.tasks:test_web_headed"
test-smoke = "scripts.tasks:test_smoke"
test-parallel = "scripts.tasks:test_parallel"
test-api-parallel = "scripts.tasks:test_api_parallel"
test-web-parallel = "scripts.tasks:test_web_parallel"
test-smoke-parallel = "scripts.tasks:test_smoke_parallel"

# Pre-commit hooks
install-hooks = "scripts.tasks:install_hooks"
pre-commit = "scripts.tasks:pre_commit"
pre-commit-update = "scripts.tasks:pre_commit_update"

# Combined tasks
pr-ready = "scripts.tasks:pr_ready"

# Cleanup
clean = "scripts.tasks:clean"
clean-videos = "scripts.tasks:clean_videos"

# Help
list-commands = "scripts.tasks:list_commands"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool Configurations
[tool.black]
line-length = 130
target-version = ['py39']

[tool.ruff]
select = ["E", "F", "W", "I", "N"]
line-length = 130

[tool.isort]
profile = "black"

# Pytest configuration moved to pytest.ini to avoid duplication
